color contrast fixed

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -8,7 +8,7 @@
   background-color: #454e6d !important;
 }
 .Medic {
-  background-color: #ffe17e !important;
+  background-color: #ccab40 !important;
 }
 .Survivalist {
   background-color: #971417 !important;
